{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 68,
  "lineage": "fc36d5b8-7b95-ff0e-6dfc-d7f5d67f6a64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "my_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:865351741419:loadbalancer/my-terraform-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "my-terraform-elb-2041520246.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-terraform-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:us-east-1:865351741419:certificate/42bf8fcf-d51b-4305-a86a-b9c3a865d387"
              },
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-terraform-elb",
            "security_groups": [
              "sg-0783e06142f5412f1"
            ],
            "source_security_group": "865351741419/default_elb_13c79e67-df3f-37a2-b0ea-0b8acc0159d4",
            "source_security_group_id": "sg-0783e06142f5412f1",
            "subnets": [
              "subnet-4304070e",
              "subnet-440d711b"
            ],
            "tags": {
              "Name": "terraform-elb"
            },
            "tags_all": {
              "Name": "terraform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865351741419:internet-gateway/igw-014916c1ae9442647",
            "id": "igw-014916c1ae9442647",
            "owner_id": "865351741419",
            "tags": {
              "Name": "TF"
            },
            "tags_all": {
              "Name": "TF"
            },
            "vpc_id": "vpc-05a086b21d7451992"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-014916c1ae9442647",
            "id": "r-rtb-0ab28ade1462cec801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ab28ade1462cec80",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865351741419:route-table/rtb-035bc7325e31302db",
            "id": "rtb-035bc7325e31302db",
            "owner_id": "865351741419",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private-RT"
            },
            "tags_all": {
              "Name": "Private-RT"
            },
            "vpc_id": "vpc-05a086b21d7451992"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865351741419:route-table/rtb-0ab28ade1462cec80",
            "id": "rtb-0ab28ade1462cec80",
            "owner_id": "865351741419",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public_RT"
            },
            "tags_all": {
              "Name": "Public_RT"
            },
            "vpc_id": "vpc-05a086b21d7451992"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a4cd8276e626fb9",
            "route_table_id": "rtb-0ab28ade1462cec80",
            "subnet_id": "subnet-046442f886d76a985"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.pub_sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bd948c9828c3b45",
            "route_table_id": "rtb-0ab28ade1462cec80",
            "subnet_id": "subnet-00dca42307826d276"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.pub_sub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f7545a6a576baa1",
            "route_table_id": "rtb-035bc7325e31302db",
            "subnet_id": "subnet-0dc6ea86ed28bf2de"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.pri_sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f27bf6b52d06f86e",
            "route_table_id": "rtb-035bc7325e31302db",
            "subnet_id": "subnet-033778ae3aa67757f"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.pri_sub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865351741419:security-group/sg-0fdaf5d81a62dd545",
            "description": "This will allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdaf5d81a62dd545",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule for HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule for Nginx",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule for SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH",
            "name_prefix": "",
            "owner_id": "865351741419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SSH"
            },
            "tags_all": {
              "Name": "Allow SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a086b21d7451992"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865351741419:subnet/subnet-0dc6ea86ed28bf2de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0dc6ea86ed28bf2de",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865351741419",
            "tags": {
              "Name": "Private-1"
            },
            "tags_all": {
              "Name": "Private-1"
            },
            "vpc_id": "vpc-05a086b21d7451992"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865351741419:subnet/subnet-033778ae3aa67757f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-033778ae3aa67757f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865351741419",
            "tags": {
              "Name": "Private-2"
            },
            "tags_all": {
              "Name": "Private-2"
            },
            "vpc_id": "vpc-05a086b21d7451992"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865351741419:subnet/subnet-046442f886d76a985",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-046442f886d76a985",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865351741419",
            "tags": {
              "Name": "Public-1"
            },
            "tags_all": {
              "Name": "Public-1"
            },
            "vpc_id": "vpc-05a086b21d7451992"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865351741419:subnet/subnet-00dca42307826d276",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00dca42307826d276",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865351741419",
            "tags": {
              "Name": "Public-2"
            },
            "tags_all": {
              "Name": "Public-2"
            },
            "vpc_id": "vpc-05a086b21d7451992"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865351741419:vpc/vpc-05a086b21d7451992",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c91042fe429d5b6b",
            "default_route_table_id": "rtb-0f24d03cde6fe7b88",
            "default_security_group_id": "sg-0d860d5cb69fed41c",
            "dhcp_options_id": "dopt-30aa834a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05a086b21d7451992",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f24d03cde6fe7b88",
            "owner_id": "865351741419",
            "tags": {
              "Name": "TF"
            },
            "tags_all": {
              "Name": "TF"
            }
          }
        }
      ]
    }
  ]
}